Fix bug-> letter mistake

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="password__slider">
           <div class="label-group">
             <label for="password-range" class="text-s">Character Length</label>
-            <output id="counter-range" class="counter text-">10</output>
+            <output id="counter-range" class="counter text-l">10</output>
           </div>
           <input
             type="range"
