--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
               role="meter"
               aria-labelledby="strength__value"
             >
-              <li class="level-item active"></li>
-              <li class="level-item active"></li>
-              <li class="level-item active"></li>
+              <li class="level-item"></li>
+              <li class="level-item"></li>
+              <li class="level-item"></li>
               <li class="level-item"></li>
             </ul>
           </div>
