Update index.html -> not use Form property, change name = section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </section>
-      <form class="password__body">
+      <section class="password__body">
         <div class="password__slider">
           <div class="label-group">
             <label for="password-range" class="text-s">Character Length</label>
@@ -132,7 +132,7 @@
             />
           </svg>
         </button>
-      </form>
+      </section>
     </main>
     <script type="module" src="src/main.js"></script>
   </body>
