--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </section>
-      <form class="password__body">
+      <section class="password__body">
         <div class="password__slider">
           <div class="label-group">
             <label for="password-range" class="text-s">Character Length</label>
@@ -134,7 +134,7 @@
             />
           </svg>
         </button>
-      </form>
+      </section>
     </main>
   </body>
 </html>
